# delta-rs

./: Cargo.toml
crates/core/src/data_catalog/storage/: mod.rs
crates/core/src/delta_datafusion/: session.rs
crates/core/src/delta_datafusion/cdf/: scan_utils.rs
crates/core/src/delta_datafusion/table_provider/next/scan/: exec_meta.rs
crates/core/src/table/: state.rs
crates/deltalake/: Cargo.toml
crates/deltalake/src/: lib.rs
crates/hdlfs/: Cargo.toml
crates/hdlfs/src/: config.rs  lib.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
